--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ steam_appid.txt
 xcode/Barony/Barony.xcodeproj/project.xcworkspace/*
 xcode/Barony/Barony.xcodeproj/xcuserdata/*
 *.ps1
+!LICENSE.nativefiledialog.txt
