Fixes Issues building with steamworks enabled by linking nfd and GTK3.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,45 +43,47 @@ endif()
 
 # EOS Tokens
 
-if (DEFINED ENV{BUILD_ENV_PR} AND NOT DEFINED BUILD_ENV_PR) # TODO: We should make all environment variable checks in this file not overwrite whatever was explicitly passed in on the command line...
-	set (BUILD_ENV_PR $ENV{BUILD_ENV_PR})
-endif()
-if (EOS_ENABLED AND "${BUILD_ENV_PR}" STREQUAL "")
+#if (DEFINED ENV{BUILD_ENV_PR} AND NOT DEFINED BUILD_ENV_PR) # TODO: We should make all environment variable checks in this file not overwrite whatever was explicitly passed in on the command line...
+#	set (BUILD_ENV_PR $ENV{BUILD_ENV_PR})
+#endif()
+
+if (EOS_ENABLED AND "$ENV{BUILD_ENV_PR}" STREQUAL "")
 	message(FATAL_ERROR "BUILD_ENV_PR must be specified if EOS is enabled.")
 endif()
 
-if (DEFINED ENV{BUILD_ENV_SA} AND NOT DEFINED BUILD_ENV_SA)
-	set (BUILD_ENV_SA $ENV{BUILD_ENV_SA})
-endif()
-if (EOS_ENABLED AND "${BUILD_ENV_SA}" STREQUAL "")
+#if (DEFINED ENV{BUILD_ENV_SA} AND NOT DEFINED BUILD_ENV_SA)
+#	set (BUILD_ENV_SA $ENV{BUILD_ENV_SA})
+#endif()
+if (EOS_ENABLED AND "$ENV{BUILD_ENV_SA}" STREQUAL "")
 	message(FATAL_ERROR "BUILD_ENV_SA must be specified if EOS is enabled.")
 endif()
 
-if (DEFINED ENV{BUILD_ENV_DE} AND NOT DEFINED BUILD_ENV_DE)
-	set (BUILD_ENV_DE $ENV{BUILD_ENV_DE})
-endif()
-if (EOS_ENABLED AND "${BUILD_ENV_DE}" STREQUAL "")
+#if (DEFINED ENV{BUILD_ENV_DE} AND NOT DEFINED BUILD_ENV_DE)
+#	set (BUILD_ENV_DE $ENV{BUILD_ENV_DE})
+#endif()
+if (EOS_ENABLED AND "$ENV{BUILD_ENV_DE}" STREQUAL "")
 	message(FATAL_ERROR "BUILD_ENV_DE must be specified if EOS is enabled.")
 endif()
 
-if (DEFINED ENV{BUILD_ENV_CC} AND NOT DEFINED BUILD_ENV_CC)
-	set (BUILD_ENV_CC $ENV{BUILD_ENV_CC})
-endif()
-if (EOS_ENABLED AND "${BUILD_ENV_CC}" STREQUAL "")
+#if (DEFINED ENV{BUILD_ENV_CC} AND NOT DEFINED BUILD_ENV_CC)
+#	set (BUILD_ENV_CC $ENV{BUILD_ENV_CC})
+#endif()
+
+if (EOS_ENABLED AND "$ENV{BUILD_ENV_CC}" STREQUAL "")
 	message(FATAL_ERROR "BUILD_ENV_CC must be specified if EOS is enabled.")
 endif()
 
-if (DEFINED ENV{BUILD_ENV_CS} AND NOT DEFINED BUILD_ENV_CS)
-	set (BUILD_ENV_CS $ENV{BUILD_ENV_CS})
-endif()
-if (EOS_ENABLED AND "${BUILD_ENV_CS}" STREQUAL "")
+#if (DEFINED ENV{BUILD_ENV_CS} AND NOT DEFINED BUILD_ENV_CS)
+#	set (BUILD_ENV_CS $ENV{BUILD_ENV_CS})
+#endif()
+if (EOS_ENABLED AND "$ENV{BUILD_ENV_CS}" STREQUAL "")
 	message(FATAL_ERROR "BUILD_ENV_CS must be specified if EOS is enabled.")
 endif()
 
-if (DEFINED ENV{BUILD_ENV_GSE} AND NOT DEFINED BUILD_ENV_GSE)
-	set (BUILD_ENV_GSE $ENV{BUILD_ENV_GSE})
-endif()
-if (EOS_ENABLED AND "${BUILD_ENV_GSE}" STREQUAL "")
+#if (DEFINED ENV{BUILD_ENV_GSE} AND NOT DEFINED BUILD_ENV_GSE)
+#	set (BUILD_ENV_GSE $ENV{BUILD_ENV_GSE})
+#endif()
+if (EOS_ENABLED AND "$ENV{BUILD_ENV_GSE}" STREQUAL "")
 	message(FATAL_ERROR "BUILD_ENV_GSE must be specified if EOS is enabled.")
 endif()
 
@@ -457,6 +459,25 @@ if (GAME_ENABLED)
 	if (STEAMWORKS_ENABLED)
 	  target_link_libraries(barony ${STEAMWORKS_LIBRARY})
 	  #target_link_libraries(barony ${STEAMWORKS_CWRAPPER_LIBRARIES} -lstdc++)
+	  	find_package(PkgConfig REQUIRED)
+		pkg_check_modules(GLIB REQUIRED glib-2.0)
+		include_directories(${GLIB_INCLUDE_DIRS})
+		target_link_libraries(barony ${GLIB_LIBRARIES})
+		
+		find_library(NFD_LIBRARY NAMES nfd PATHS $ENV{NFD_DIR}/lib NO_DEFAULT_PATH)
+		if(NOT NFD_LIBRARY)
+    		message(FATAL_ERROR "NFD library not found")
+		endif()
+		include_directories($ENV{NFD_DIR}/include/nfd)
+		target_link_libraries(barony ${NFD_LIBRARY})
+		
+		find_package(PkgConfig REQUIRED)
+		pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+		include_directories(${GTK3_INCLUDE_DIRS})
+		link_directories(${GTK3_LIBRARY_DIRS})
+		add_definitions(${GTK3_CFLAGS_OTHER})
+		target_link_libraries(barony ${GTK3_LIBRARIES})
+		
 	endif()
 	if (EOS_ENABLED)
 	  target_link_libraries(barony ${EOS_LIBRARIES})
