--- a/xcode/Barony/Barony.xcodeproj/xcshareddata/xcschemes/Barony Editor.xcscheme
+++ b/xcode/Barony/Barony.xcodeproj/xcshareddata/xcschemes/Barony Editor.xcscheme
@@ -49,6 +49,13 @@
             ReferencedContainer = "container:Barony.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
