Add vcpkg.json, many build organizations and fixes

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,8 @@ xcode/Barony/Barony.xcodeproj/project.xcworkspace/*
 xcode/Barony/Barony.xcodeproj/xcuserdata/*
 *.ps1
 !LICENSE.nativefiledialog.txt
+vcpkg_installed/
+*.ilk
+*.sdf
+.VSCodeCounter
+*.map
