--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,7 @@ else()
 	set (EDITOR_ENABLED 1)
 endif()
 
-if (DEFINED ENV{GAME_ENABLED})
+if (DEFINED $ENV{GAME_ENABLED})
 	set (GAME_ENABLED $ENV{GAME_ENABLED})
 else()
 	set (GAME_ENABLED 1)
@@ -282,6 +282,8 @@ INCLUDE_DIRECTORIES(${NFD_INCLUDE_DIR})
 LINK_DIRECTORIES(${NFD_LIBRARY})
 INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR} ${SDL2NET_INCLUDE_DIR} ${SDL2_NET_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIR}  ${SDL2_TTF_INCLUDE_DIRS} ${PHYSFS_INCLUDE_DIR})
 LINK_DIRECTORIES(${SDL2_LINK_DIRS} ${SDL2_LINK_DIR} ${SDL2IMAGE_LINK_DIRS} ${SDL2_IMAGE_LINK_DIR} ${SDL2NET_LINK_DIR} ${SDL2_NET_LINK_DIRS} ${SDL2TTF_LINK_DIR}  ${SDL2_TTF_LINK_DIRS} ${PHYSFS_LINK_DIR})
+find_package(GLEW REQUIRED)
+include_directories(${GLEW_INCLUDE_DIR})
 
 # if (NOT WIN32)
 # else()
@@ -475,6 +477,7 @@ if (GAME_ENABLED)
 		target_link_libraries(barony -lpthread)
 	#endif(LINUX)
   endif()
+  target_link_libraries(barony ${GLEW_LIBRARIES})
   target_link_libraries(barony ${OPENGL_LIBRARIES})
   target_link_libraries(barony ${THREADS_LIBRARIES}) # TODO: Not sure what this is doing, since it doesn't appear to be working in Linux!
   target_link_libraries(barony -lm) # TODO: In Visual Studio, I bet this is something else, right?
